--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@
 
     @media (min-width: 1024px) {
       .daily-grid {
-        grid-template-columns:repeat(2, minmax(0, 1fr));
+        grid-template-columns:repeat(auto-fit, minmax(360px, 1fr));
+        justify-content:center;
         align-items:start;
         gap:2rem;
       }
