Document grid column width cap for daily layout

--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
 
     @media (min-width: 1024px) {
       .daily-grid {
+        /* Limiter la largeur des colonnes pour conserver des cartes centrées */
         grid-template-columns:repeat(auto-fit, minmax(360px, min(420px, 100%)));
         justify-content:center;
         justify-items:center;
