--- a/index.html
+++ b/index.html
@@ -316,12 +316,9 @@
       gap:1.1rem;
     }
     .daily-consigne {
-      background:#fff;
-      border-radius:1rem;
-      border:1px solid rgba(148,163,184,.22);
-      box-shadow:0 6px 16px rgba(15,23,42,.04);
-      padding:1rem 1.2rem;
-      display:grid;
+      width:100%;
+      display:flex;
+      flex-direction:column;
       gap:.75rem;
       transition:background .2s ease,border-color .2s ease,box-shadow .2s ease;
     }
