Adopt pastel blue styling for high priority surfaces

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
       position:relative;
     }
     .priority-surface-high {
-      background:#fef2f2;
-      border-color:#fecaca;
-      box-shadow:0 6px 18px rgba(248,113,113,.18);
+      background:#eff6ff;
+      border-color:#bfdbfe;
+      box-shadow:0 6px 18px rgba(59,130,246,0.18);
     }
     .priority-surface-medium {
       background:#ffffff;
@@ -419,8 +419,9 @@
     }
 
     .consigne-card.priority-surface-high {
-      background:#fef2f2;
-      border-color:#fecaca;
+      background:#eff6ff;
+      border-color:#bfdbfe;
+      box-shadow:0 6px 18px rgba(59,130,246,0.18);
     }
     .consigne-card.priority-surface-low {
       background:#f8fafc;
