Fix daily header layout on mobile

--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
       header h1{ font-size:1rem; }
       .install-banner{ flex-direction:column; align-items:flex-start; text-align:left; }
       .install-banner__action{ padding-top:.25rem; }
+      .day-nav{ min-width:0; width:100%; }
+      .daily-header-actions{ margin-left:0; width:100%; justify-content:flex-start; flex-wrap:wrap; }
     }
 
     /* utilitaire pour masquer la scrollbar (déjà utilisé ci-dessus) */
