--- a/index.html
+++ b/index.html
@@ -414,9 +414,16 @@
       text-align:right;
     }
     @media (max-width: 480px) {
+      .daily-category__header {
+        flex-direction:column;
+        align-items:flex-start;
+        gap:.75rem;
+      }
       .daily-category__count {
-        width:100%;
         margin-left:0;
+        text-align:left;
+        align-self:flex-start;
+        width:100%;
       }
     }
     .daily-category__items {
