Ajuste des espacements mobiles du journalier

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     }
     @media (max-width: 480px) {
       .daily-category {
-        padding:1.25rem 1.35rem;
+        padding:1.1rem .85rem 1.3rem;
       }
       .daily-category__header {
         align-items:flex-start;
@@ -437,6 +437,9 @@
         text-align:left;
         align-self:flex-start;
         width:100%;
+      }
+      .consigne-group__children {
+        padding-inline:0;
       }
       .consigne-card--child {
         margin-left:0;
